fixed contact spacing

--- a/src/client/styles/main.styl
+++ b/src/client/styles/main.styl
@@ -224,7 +224,6 @@ body
   font-family freeroadregular
   text-transform uppercase
   text-align center
-  vertical-align top
   h1, h2, h3
     font-family freeroad_blackregular
   h1
@@ -236,6 +235,9 @@ body
     margin-left 1em
   div
     display inline-block
+    vertical-align top
+  .copy
+    text-align center
 
 #footer
   padding 1em
